Trying to understand how the packaging works.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "Strong-induction",
+  "name": "StrongInduction",
   "version": "1.0",
   "description": "Provides a strong induction lemma",
   "esy": {
-    "build": "make",
+    "build": "dune build -p #{self.name}",
+		"install": "dune install --prefix=#{self.install}",
     "buildsInSource": "_build"
-  },
-  "scripts": {
-    "build": "make build"
   },
   "dependencies": {
     "@opam/dune": "*",
