--- a/theories/dune
+++ b/theories/dune
@@ -1,5 +1,5 @@
 (coq.theory
   (name StrongInduction)
   (package StrongInduction)
-  (synopsis "The strong induction over natural numbers."))
+  (synopsis "Induction principles over natural numbers."))
 
